# Toy-NeuralNetwork

./: NeuralNetworkV2.py  README.md  pyproject.toml
toy-neuralnetwork/: __init__.py  builder.py  model.py
toy-neuralnetwork/activation_functions/: __init__.py  leaky_relu.py  protocol.py  relu.py  sigmoid.py  softplus.py  tanh.py
