[tool.poetry]
name = "toy-neuralnetwork"
version = "0.1.0"
description = "A toy multi-later neural network with biases and simple activation functions"
authors = ["aidanprice <justaidanp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
